kubernetes/esp-website/deployment.yaml
# Deployment File
# - domain:  emotionalsupportpizza.com
# - purpose: website

# setup the namespace
apiVersion: v1
kind: Namespace
metadata:
  name: emotional-support-pizza

---

# do the deployment of the beast
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esp-website
  namespace: emotional-support-pizza
  labels:
    domain: emotionalsuppportpizza.com
    app: emotional-support-pizza  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emotional-support-pizza
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: emotional-support-pizza
    spec:
      containers:
        - name: esp-website
          image: iammrcupp/esp_project:v2.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
