kubernetes/esp-website/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esp-website-ingress
  namespace: emotional-support-pizza
  labels:
    name: esp-website
    app: emotional-support-pizza
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
    
spec:
  tls:
  - hosts:
    - "emotionalsupportpizza.com"
    secretName: esp-website-https
  rules:
  - host: emotionalsupportpizza.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: esp-website
            port: 
              number: 80
